...
                ),
              ),
              SliverPersistentHeader(
                delegate: _SliverAppBarDelegate(
                  AppTabBar(
                    tabController: _tabController,
                    tabs: const ['Overview', 'Consumption', 'Payments'],
                  ),
                ),
                pinned: true,
              ),
            ];
          },
...
